2006-06-13  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/SmackerPlayer.cs: switch from using
	Thread.Suspend/Thread.Resume to using an AutoResetEvent.  the
	decoder calls .WaitOne when the queue is full, and the player
	thread calls .Set when the queue is less than half full.  This
	fixes the hanging of the player.  It also seems to fix the Ctrl-q
	behavior during playback.

	* SCSharp/SCSharp.UI/Cinematic.cs (PlayerFrameReady): move the
	scaling code here so we don't scale on every repaint.  also,
	dispose of the previously scaled surface.
	(VideoPainter): simplify this method to just a check and Blit
	call.

2006-06-13  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Game.cs (.ctor): fix c&p error.

2006-06-13  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.Mpq.Smk/SDLPCMStream.cs (Dispose): mark "new" to
	fix compile error on windows.

	* SCSharp/SCSharp.UI/SpriteManager.cs (CreateSprite): Commit
	Foole's fix for ticket #7.

2006-06-13  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Game.cs: Fix ticket #8, use ToLower() to
	check for the SC install.exe filename.

2006-06-13  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/SmackerPlayer.cs: mostly adapt MtPOI's
	SmkTest player here.  Remove the (missing) ffmpeg glu library
	dependency.

	* SCSharp/SCSharp.UI/Cinematic.cs: move the frame scaling stuff
	here.

	* SCSharp/SCSharp.UI/Painter.cs: rewrite things such that we only
	have one Painter (accessed via Painter.Instance).  Also, now we
	only paint if there's a dirty rectangle.  We rely on the various
	UI elements to tell us when a region on the screen is invalid and
	needs redrawing.  This isn't the final iteration, but it's a lot
	closer to the "right" solution.

	* SCSharp/SCSharp.Util/Util.cs: add MakeTag from MtPOI's SmkLib.
	it should probably live in that code instead of here, but leave it
	here for now.

2006-06-08  Chris Toshok  <toshok@hungry.com>
